--- a/WebUI/wwwroot/index.html
+++ b/WebUI/wwwroot/index.html
@@ -4,12 +4,31 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebUI</title>
+    <title>EasySQLite</title>
     <base href="/" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta content="bootstrap,blazor,wasm,webassembly,UI,netcore,web,assembly" name="Keywords">
+    <base href="/">
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="WebUI.styles.css" rel="stylesheet" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="icon-512.png">
+    <link rel="manifest" href="manifest.json">
+
+    <!-- 引用 BootstrapBlazor.FontAwesome 字体库包 -->
+    <link href="_content/BootstrapBlazor.FontAwesome/css/font-awesome.min.css" rel="stylesheet">
+    <!-- 引用 BootstrapBlazor 组件库包 -->
+    <link href="_content/BootstrapBlazor/css/bootstrap.blazor.bundle.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="_content/BootstrapBlazorApp1.Shared/css/site.css">
+    <link rel="stylesheet" href="_content/BootstrapBlazorApp1.Shared/css/motronic.css">
+    <link href="BootstrapBlazorApp1.styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="style/loading.css">
+    <!--引入BootstrapBlazor 组件库包-->
+    <script src="_content/BootstrapBlazor/js/bootstrap.blazor.bundle.min.js"></script>
 </head>
 
 <body>
