--- a/WebUI/wwwroot/index.html
+++ b/WebUI/wwwroot/index.html
@@ -19,6 +19,7 @@
     <link rel="apple-touch-icon" href="icon-512.png">
     <link rel="manifest" href="manifest.json">
 
+    <!--BootstrapBlazor相关包-->
     <!-- 引用 BootstrapBlazor.FontAwesome 字体库包 -->
     <link href="_content/BootstrapBlazor.FontAwesome/css/font-awesome.min.css" rel="stylesheet">
     <!-- 引用 BootstrapBlazor 组件库包 -->
