--- a/WebUI/wwwroot/index.html
+++ b/WebUI/wwwroot/index.html
@@ -23,13 +23,10 @@
     <!-- 引用 BootstrapBlazor.FontAwesome 字体库包 -->
     <link href="_content/BootstrapBlazor.FontAwesome/css/font-awesome.min.css" rel="stylesheet">
     <!-- 引用 BootstrapBlazor 组件库包 -->
-    <link href="_content/BootstrapBlazor/css/bootstrap.blazor.bundle.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="_content/BootstrapBlazorApp1.Shared/css/site.css">
-    <link rel="stylesheet" href="_content/BootstrapBlazorApp1.Shared/css/motronic.css">
-    <link href="BootstrapBlazorApp1.styles.css" rel="stylesheet" />
-    <link rel="stylesheet" href="style/loading.css">
-    <!--引入BootstrapBlazor 组件库包-->
-    <script src="_content/BootstrapBlazor/js/bootstrap.blazor.bundle.min.js"></script>
+    <link rel="stylesheet" href="_content/BootstrapBlazor.FontAwesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="_content/BootstrapBlazor/css/bootstrap.blazor.bundle.min.css" />
+    <link rel="stylesheet" href="_content/BootstrapBlazor/css/motronic.min.css" />
+
 </head>
 
 <body>
@@ -47,6 +44,8 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/BootstrapBlazor/js/bootstrap.blazor.bundle.min.js"></script>
+    <script src="_framework/blazor.web.js"></script>
 </body>
 
 </html>
